--- a/start/igra.html
+++ b/start/igra.html
@@ -42,6 +42,7 @@
     }
     .btn {
       flex: 1;
+      min-width: 200px;
       height: 70px;
       background-color: white;
       color: #333;
@@ -88,7 +89,7 @@
       font-size: 22px;
       font-weight: 700;
       width: 100%;
-      border-radius: 25px;
+      border-radius: 25px; /* Vraćen originalni border-radius */
       border: none;
       background: linear-gradient(45deg, #6a4c93, #ff6b35);
       color: white;
@@ -128,6 +129,7 @@
       .btn {
         height: 60px;
         font-size: 18px;
+        min-width: 150px;
       }
       .rect {
         width: 60px;
