--- a/start/asocijacije/index.html
+++ b/start/asocijacije/index.html
@@ -692,6 +692,7 @@
     
     // Save score
     localStorage.setItem('asocijacijeScore', score);
+    localStorage.setItem('asocijacijePlayed', 'true');
   }
 
   // Go back to menu
